# bambooflow

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-tests.yml
bambooflow/: __init__.py
bambooflow/datapipes/: __init__.py  aiter.py  callable.py
bambooflow/helpers/: __init__.py  decorators.py
bambooflow/tests/: test_bambooflow.py  test_datapipes_aiter.py  test_datapipes_callable.py  test_helpers_decorators.py
docs/: .readthedocs.yaml  CONTRIBUTING.md  _config.yml  _toc.yml  api.md  index.md
