[tool.poetry]
name = "bambooflow"
version = "0.0.0"
description = "First make the hollow pipe, then let the water flow~"
authors = ["Wei Ji <23487320+weiji14@users.noreply.github.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: AsyncIO",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
# Required
python = ">=3.9,<4.0"
# Docs
jupyter-book = {version="*", optional=true}

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.extras]
docs = [
    "jupyter-book",
]

[tool.poetry-dynamic-versioning]
bump = true
enable = true
metadata = true
style = "pep440"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.6.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
